--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -68,12 +68,13 @@
     </div>
   </section>
 </div>
-<div class="p-5 text-center mb-2 text-black">
+
+<div class="mb-5">
   <div class="container">
     <div class="row">
-      <div class="col-1">
+      <div class="col-sm-1">
       </div>
-      <div class="col-10">
+      <div class="col-sm-10">
         <div class="card text-center">
           <div class="card-header">
             <h1 class="text-center" >Targetとは？</h1>
@@ -86,70 +87,71 @@
           <div class="card-footer text-muted">
           </div>
         </div>
-        <div class="col-1">
+        <div class="col-sm-1">
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="p-5 text-center mb-2 text-black">
+
+<div class="mb-5">
   <div class="container">
     <div class="row">
-      <div class="col-1">
+      <div class="col-sm-1">
       </div>
-      <div class="col-10">
+      <div class="col-sm-10">
         <div class="card mb-3">
           <img src="/images/company2.png" class="card-img-top img-fluid" alt="...">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h5 class="card-title">Companyログイン時のDepartmentTargetの表示画面</h5>
             <p class="card-text">各部署の年間目標と月間目標が一覧で表示されます。</p>
             <p class="card-text"><small class="text-muted">CompanyLogin</small></p>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-sm-1">
       </div>
     </div>
   </div>
 </div>
 
-<div class="p-5 text-center mb-2 text-black">
+<div class="mb-5">
   <div class="container">
     <div class="row">
-      <div class="col-1">
+      <div class="col-sm-1">
       </div>
-      <div class="col-10">
+      <div class="col-sm-10">
         <div class="card mb-3">
           <img src="/images/department.png" class="card-img-top img-fluid" alt="...">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h5 class="card-title">Departmentログイン時のDepartmentTargetの表示画面</h5>
             <p class="card-text">ログイン部署の年間目標と月間目標が一覧で表示されます。</p>
             <p class="card-text"><small class="text-muted">Department(株式会社guest:開発)Login</small></p>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-sm-1">
       </div>
     </div>
   </div>
 </div>
 
-<div class="p-5 text-center mb-2 text-black">
+<div class="mb-5">
   <div class="container">
     <div class="row">
-      <div class="col-1">
+      <div class="col-sm-1">
       </div>
-      <div class="col-10">
+      <div class="col-sm-10">
         <div class="card mb-3">
           <img src="/images/todo.png" class="card-img-top img-fluid" alt="...">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h5 class="card-title">Userログイン時のToDOの表示画面</h5>
             <p class="card-text">UserのToDoとリンクした案件が一覧で表示されます。</p>
             <p class="card-text"><small class="text-muted">UserLogin</small></p>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-sm-1">
       </div>
     </div>
   </div>
