--- a/app/views/api/v1/tweets/_form.html.erb
+++ b/app/views/api/v1/tweets/_form.html.erb
@@ -16,17 +16,12 @@
     <%= form.text_area :body %>
   </div>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
   <div class = "field">
     <%= form.file_field :image %>
   </div>
 
 
-  <div class="actions">
-    <%= form.submit %>
+  <div>
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
